--- a/src/Componets/Product.css
+++ b/src/Componets/Product.css
@@ -1,3 +1,38 @@
+
+.product{
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    max-height: 400px;
+    min-width: 100px;
+    margin: 10px;
+    padding: 20px;
+    z-index: 1;
+}
 .product_rating{
     display: flex;
+}
+.product_price{
+    margin-top: 5px;
+}
+.product_info{
+    height: 100px;
+    margin-bottom: 15px;
+
+}
+
+.product > img{
+    width: 100%;
+    max-height: 200px;
+    object-fit:  contain;
+    margin-bottom: 15px;
+}
+
+.product > button{
+    background-color: #f0c14b;
+    border: 1px solid;
+    border-color: #a88134 #9c7e31 #846a29;
+
 }
